fix a bug in no news appearing in private browsing on safari

--- a/public/styleTf.css
+++ b/public/styleTf.css
@@ -1,9 +1,9 @@
 /*carousel item*/
 body{
   font-family: helvetica, verdana, sans-serif;
-  background-color: rgb(0,0,0);
+  /*background-color: rgb(0,0,0);
   background-image: url("images/backgroundTf.png");
-  background-repeat: repeat;
+  background-repeat: repeat;*/
 }
 
 .item{
